HelloUltraviolet/Fixtures/RejectedSource/Expressions/PipelineArgCount/Expected.uv
//! Expected diagnostic metadata for the PipelineArgCount rejected-source specimen.

expectedDiagnostic("E-SEM-2539", "rule.16.T-Pipeline-ArgCount-Err")
